가상스레드와 카프카, 메모리 효율성 테스트

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,9 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:mongodb'
 
-
+	// kafka
+	implementation 'org.apache.kafka:kafka-clients'
+	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 tasks.named('test') {
