--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation ('org.springframework.boot:spring-boot-starter-web') {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+	}
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -39,6 +41,9 @@ dependencies {
 	// kafka
 	implementation 'org.apache.kafka:kafka-clients'
 	implementation 'org.springframework.kafka:spring-kafka'
+
+	// undertow
+	implementation 'org.springframework.boot:spring-boot-starter-undertow'
 }
 
 tasks.named('test') {
