--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ java {
 	}
 }
 
+ext {
+	springCloudVersion = '2024.0.0'
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -27,6 +31,9 @@ dependencies {
 	implementation ('org.springframework.boot:spring-boot-starter-web') {
 		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
 	}
+	// undertow
+	implementation 'org.springframework.boot:spring-boot-starter-undertow'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -42,8 +49,15 @@ dependencies {
 	implementation 'org.apache.kafka:kafka-clients'
 	implementation 'org.springframework.kafka:spring-kafka'
 
-	// undertow
-	implementation 'org.springframework.boot:spring-boot-starter-undertow'
+	// feign
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
